# calendar-puzzle-web

./: .gitignore  Cargo.toml  README.md  index.html  style.scss
benches/: bench.rs
src/: lib.rs  macros.rs  main.rs
src/solver/: board.rs  mask.rs  mod.rs  piece.rs  solve.rs  state.rs  target.rs
src/web/: app.rs  dropdown.rs  mod.rs  picker.rs  solver.rs
