[package]
name = "calendar-puzzle-web"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
log = "0.4"

[dependencies.yew]
version = "0.21"
features = ["csr"]

[dependencies.web-sys]
version = "0.3"
features = [
    "KeyboardEvent",
    "HtmlInputElement"
]

[dev-dependencies]
criterion = "0.5.1"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = 'fat'
codegen-units = 1
incremental = false

[profile.bench]
inherits = "release"
debug = "line-tables-only"